# llm_wrapper

./: .gitignore  ISSUES.md  README.md  pyproject.toml  test_base64_responses.py  test_wrapper.py
docs/: tutorial.md
llm_wrapper/: __init__.py  main.py
