[tool.poetry]
name = "llm_wrapper"
version = "0.1.0"
description = "My library description"
authors = ["Meir Michanie <meirm@riunx.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"

[project.urls]
Homepage = "https://github.com/meirm/llm_functions"
Issues = "https://github.com/meirm/llm_functions/issues"