[tool.poetry]
name = "llm_wrapper"
version = "0.1.3"
description = "run llm functions with just inline documentation and no code"
authors = ["Meir Michanie <meirm@riunx.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
langchain = "^0.1.0"
langchain_community = "^0.0.12"



[project.urls]
Homepage = "https://github.com/meirm/llm_functions"
Issues = "https://github.com/meirm/llm_functions/issues"