[tool.poetry]
name = "llm_wrapper"
version = "0.1.6"
description = "Run llm functions with just inline documentation and no code"
authors = ["Meir Michanie <meirm@riunx.com>"]
readme = "README.md"
keywords = ["openai", "langchain", "pydantic"]
homepage = "https://github.com/meirm/llm_functions"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
langchain = "^0.1.0"
langchain_community = "^0.0.12"

# Add classifiers
[metadata.classifiers]
license = "MIT"
license_file = "LICENSE"
description-file = "README.md"

